# otus-cpp-01_28-06-2021_ci_cd

./: .gitignore  CMakeLists.txt  test_google_version.cpp
.github/workflows/: release.yml
ip-filter/: CMakeLists.txt  ip_filter.cpp  ipv4.cpp
ip-filter/ip/: CMakeLists.txt  ipv4.cpp  ipv4.h
ip-filter/ip_filter/: CMakeLists.txt  ip_filter.cpp
ip-filter/test/: CMakeLists.txt  ip_test.cpp
